infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geobee-maps-backend
  namespace: geobee
  labels:
    app: geobee-maps-backend
spec:
  selector:
    matchLabels:
      app: geobee-maps-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: "geobee-maps-backend"
    spec:
      containers:
      - name: geobee-maps-backend
        image: geobee-maps-backend
        ports:
          - containerPort: 8000
