infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-geobee
  namespace: geobee
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: api.geomaps.clubsunset.tech
    http:
      paths:
      - backend:
          service:
            name: geobee-maps-backend-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - "api.geomaps.clubsunset.tech"
      secretName: letsencrypt-hm
